2010-06-16  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100616
	  Merge with NetBSD make, pick up
	  o man page update
	  o call PrintOnError from JobFinish when we detect an error we
	    are not ignoring. 
	
2010-06-06  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100606
	  Merge with NetBSD make, pick up
	  o man page update

2010-06-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100605
	  Merge with NetBSD make, pick up
	  o use bmake_signal() which is a wrapper around sigaction() 
	    in place of signal()
	  o add .export-env to allow exporting variables to environment
	    without tracking (so no re-export when the internal value is
	    changed).
	
2010-05-24  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100524
	  Merge with NetBSD make, pick up
	  o fix for .info et al being greedy.

2010-05-23  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100520
	  Merge with NetBSD make, pick up
	  o back to using realpath on argv[0] 
	    but only if contains '/' and does not start with '/'.

2010-05-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap: use absolute path for bmake when running tests.

	* Makefile.in (MAKE_VERSION):  bump version to 20100510
	  Merge with NetBSD make, pick up
	  o revert use of realpath on argv[0]
	    too many corner cases.
	  o print MAKE_PRINT_VAR_ON_ERROR before running .ERROR target.

2010-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100505
	  Merge with NetBSD make, pick up
	  o fix for missed SIGCHLD when compiled with SunPRO
	    actually for bmake, defining FORCE_POSIX_SIGNALS would have
	    done the job.

2010-04-30  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100430
	  Merge with NetBSD make, pick up